...
                    withAnimation {
                        self.isNavBarOpen.toggle()
                    }
                }) {
                    Image(systemName: "line.horizontal.3")
                }
                .accessibility(identifier: "hamburgerBtn")
            ))
        }
        .environmentObject(state)
        .onAppear {
            // call API
            Repository().getCurrentWeather { (CurrentWeatherDataModel) in
...
