...
            <point key="canvasLocation" x="-1542.0289855072465" y="1270.9821428571429"/>
        </scene>
        <!--About-->
        <scene sceneID="eBH-nc-Cr7">
            <objects>
                <navigationController id="XVd-N7-lzf" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="About" image="doc.plaintext" catalog="system" id="iix-Rq-vHI" userLabel="aboutNav"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vez-tR-tGn">
                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="gTD-57-AAu" kind="relationship" relationship="rootViewController" id="cVJ-Ng-Zwo"/>
...
            <point key="canvasLocation" x="-572" y="558"/>
        </scene>
        <!--Home-->
        <scene sceneID="74t-Vy-YVL">
            <objects>
                <navigationController storyboardIdentifier="HomeViewController" id="Nd3-bR-Dlj" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="sun.max.fill" catalog="system" id="Ieh-sB-BAN" userLabel="homeNav"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g0V-Gn-6pT">
                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="jJv-U3-FP5" kind="relationship" relationship="rootViewController" id="Luv-ni-6yi"/>
...
            <point key="canvasLocation" x="-2368.1159420289855" y="1270.9821428571429"/>
        </scene>
        <!--Settings-->
        <scene sceneID="oCk-gb-3AB">
            <objects>
                <navigationController id="Qhd-vt-qIm" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="gearshape" catalog="system" id="Edk-lI-Jxk" userLabel="settingsNav"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Chv-cP-Tfe">
                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="O2N-H3-Guh" kind="relationship" relationship="rootViewController" id="ayz-eP-3Am"/>
...
